# anicli-es

./: Cargo.toml  README.md
src/: main.rs  mainfunctions.rs
src/mainfunctions/: auxfunctions.rs
